--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -67,10 +67,10 @@ jobs:
             # ---------------------------------------------------------------------------------------
 
             - name: "🏷️ Get Previous tag"
-              id: previoustag
+              id: task_tag_previous
               uses: "WyriHaximus/github-action-get-previous-tag@v1"
               with:
-                fallback: 1.0.0 # Optional fallback tag to use when no tag can be found
+                fallback: 1.0.0
 
             # ---------------------------------------------------------------------------------------
             #   Job > Print Current Version
@@ -79,7 +79,7 @@ jobs:
             - name: "🔨 Print Current Version"
               id: task_build_getver
               run: |
-                echo -e ${{ steps.previoustag.outputs.tag }}
+                echo -e ${{ steps.task_tag_previous.outputs.tag }}
 
             # ---------------------------------------------------------------------------------------
             #   precheck
@@ -121,7 +121,7 @@ jobs:
                 #   Get current version released from Github repo tags
                 # #
 
-                VER_RELEASED=$(echo "${{ steps.previoustag.outputs.tag }}" | sed 's/[v]*//g')
+                VER_RELEASED=$(echo "${{ steps.task_tag_previous.outputs.tag }}" | sed 's/[v]*//g')
 
                 # #
                 #   If current tag exists, pass the latest tag version
@@ -203,7 +203,7 @@ jobs:
                 #   Get current version released from Github repo tags
                 # #
 
-                VER_RELEASED=$(echo "${{ steps.previoustag.outputs.tag }}" | sed 's/[v]*//g')
+                VER_RELEASED=$(echo "${{ steps.task_tag_previous.outputs.tag }}" | sed 's/[v]*//g')
 
                 # #
                 #   If current tag exists, pass the latest tag version
