--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -315,7 +315,7 @@ jobs:
                 # #
 
                 echo -e "Sending command: ${command}"
-                echo "VERSION_PACKAGE<<EOF" >> $GITHUB_ENV
+                echo "PACKAGE_VERSION<<EOF" >> $GITHUB_ENV
                 echo "$(eval ./$command | tail -n1)" >> "$GITHUB_ENV"
                 echo "EOF" >> $GITHUB_ENV
 
@@ -332,8 +332,8 @@ jobs:
             - name: "🗔 Debug: Package Version"
               shell: bash
               run: |
-                echo -e "${{ env.VERSION_PACKAGE }}"
-                echo -e "${{ steps.task_build_deb.outputs.VERSION_PACKAGE }}"
+                echo -e "${{ env.PACKAGE_VERSION }}"
+                echo -e "${{ steps.task_build_deb.outputs.PACKAGE_VERSION }}"
 
             # ---------------------------------------------------------------------------------------
             #   Debug > Tree
@@ -349,33 +349,33 @@ jobs:
             # ---------------------------------------------------------------------------------------
 
             - name: >-
-                📋 Upload Artifacts › ${{ inputs.PLUGIN_NAME }}${{ env.VERSION_PACKAGE }}-linux-386.deb
+                📋 Upload Artifacts › ${{ inputs.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-386.deb
               id: task_build_artifact_i386
               uses: actions/upload-artifact@v4
               if: always()
               with:
-                name: "${{ inputs.PLUGIN_NAME }}${{ env.VERSION_PACKAGE }}-linux-386.deb"
-                path: src/${{ inputs.PLUGIN_NAME }}${{ env.VERSION_PACKAGE }}-linux-386*.deb
+                name: "${{ inputs.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-386.deb"
+                path: src/${{ inputs.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-386*.deb
                 retention-days: 30
 
             - name: >-
-                📋 Upload Artifacts › ${{ inputs.PLUGIN_NAME }}${{ env.VERSION_PACKAGE }}-linux-amd64.deb
+                📋 Upload Artifacts › ${{ inputs.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-amd64.deb
               id: task_build_artifact_amd64
               uses: actions/upload-artifact@v4
               if: always()
               with:
-                name: "${{ inputs.PLUGIN_NAME }}${{ env.VERSION_PACKAGE }}-linux-amd64.deb"
-                path: src/${{ inputs.PLUGIN_NAME }}${{ env.VERSION_PACKAGE }}-linux-amd64*.deb
+                name: "${{ inputs.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-amd64.deb"
+                path: src/${{ inputs.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-amd64*.deb
                 retention-days: 30
 
             - name: >-
-                📋 Upload Artifacts › ${{ inputs.PLUGIN_NAME }}${{ env.VERSION_PACKAGE }}-linux-arm64.deb
+                📋 Upload Artifacts › ${{ inputs.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-arm64.deb
               id: task_build_artifact_arm64
               uses: actions/upload-artifact@v4
               if: always()
               with:
-                name: "${{ inputs.PLUGIN_NAME }}${{ env.VERSION_PACKAGE }}-linux-arm64.deb"
-                path: src/${{ inputs.PLUGIN_NAME }}${{ env.VERSION_PACKAGE }}-linux-arm64*.deb
+                name: "${{ inputs.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-arm64.deb"
+                path: src/${{ inputs.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-arm64*.deb
                 retention-days: 30
 
             # ---------------------------------------------------------------------------------------
@@ -432,7 +432,7 @@ jobs:
               uses: rickstaa/action-create-tag@v1
               id: task_release_tag
               with:
-                tag: ${{ env.PACKAGE_VERSION }}
+                tag: v${{ env.PACKAGE_VERSION }}
                 tag_exists_error: false
                 message: "Latest release"
                 gpg_private_key: ${{ secrets.ADMINSERV_GPG_KEY_ASC }}
@@ -569,9 +569,9 @@ jobs:
                 draft: false
                 generate_release_notes: false
                 files: |
-                  dist/${{ inputs.PLUGIN_NAME }}${{ env.VERSION_PACKAGE }}-linux-386.deb
-                  dist/${{ inputs.PLUGIN_NAME }}${{ env.VERSION_PACKAGE }}-linux-amd64.deb
-                  dist/${{ inputs.PLUGIN_NAME }}${{ env.VERSION_PACKAGE }}-linux-arm64.deb
+                  dist/${{ inputs.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-386.deb
+                  dist/${{ inputs.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-amd64.deb
+                  dist/${{ inputs.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-arm64.deb
                 prerelease: false
                 body: |
                   ${{ steps.task_release_changelog_categorized.outputs.changelog }}
@@ -591,9 +591,9 @@ jobs:
                 draft: false
                 generate_release_notes: false
                 files: |
-                  dist/${{ inputs.PLUGIN_NAME }}${{ env.VERSION_PACKAGE }}-linux-386.deb
-                  dist/${{ inputs.PLUGIN_NAME }}${{ env.VERSION_PACKAGE }}-linux-amd64.deb
-                  dist/${{ inputs.PLUGIN_NAME }}${{ env.VERSION_PACKAGE }}-linux-arm64.deb
+                  dist/${{ inputs.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-386.deb
+                  dist/${{ inputs.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-amd64.deb
+                  dist/${{ inputs.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-arm64.deb
                 prerelease: false
                 body: |
                   > [!WARNING]
