--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -548,6 +548,14 @@ jobs:
                 path: ${{ inputs.FOLDER_DIST }}/
 
             # ---------------------------------------------------------------------------------------
+            #   Clean dist folder since we're getting the files from artifacts
+            # ---------------------------------------------------------------------------------------
+
+            - name: "⚙️ Debug › Clean Dist Folder"
+              run: |
+                tree
+
+            # ---------------------------------------------------------------------------------------
             #   [ Release ]: Post Release
             #
             #   outputs:
